########################
# Current Developments #
########################

(Work toward next release. Currently under development.)

ADDED:

CHANGED:

DEPRECATED:

REMOVED:

FIXED:

SECURITY:

DOCUMENTATION:


####################
# Version 2020.9.0 #
####################

ADDED:

  * Added ability to conditionally show or hide HTML elements via the
    'cs-show-if' and 'cs-hide-if' attributes

  * Added support for showing line numbers next to code snippets by adding
    '-lines' to the end of the language specified for a code block

  * Added ability to avoid running children's preloads into cs_children, by
    setting 'cs_load_children = False'

  * Added support for using LTI with Canvas, and added support for customizing
    the username inferred from LTI data, via "lti_username_function" in
    cs_lti_config

  * Added support for PostgreSQL as an alternative backend for storing logs

  * Added the ability to customize the text shown on the button in <showhide>
    tags, via the summary attribute

  * Added support for Markdown "callouts", similar to Markdeep's "admonitions"
    (see https://casual-effects.com/markdeep/features.md.html#basicformatting/admonitions)

  * Added support for syntax highlighting of inline code elements

  * Added the ldap3 authentication type for login using an LDAPv3 server

  * Added the sso authentication type for authentication using an arbitrary
      third-party single-sign-on provider

  * Added support for sharing KaTeX macros across calls to catsoop.render_math

  * Added support for using :short_name: syntax to reference emoji, which can
    be included as images or as unicode characters; and added emoji images from
    Twemoji (https://twemoji.twitter.com/) as the default images

CHANGED:

  * Auto-generated csq_name fields increment for every question, even those
    that have names specified

  * Switched to mistletoe (https://github.com/miyuchina/mistletoe) for handling